# bc

.github/workflows/: ci.yml
src/: CMakeLists.txt
src/libs/Irrlicht/: CMakeLists.txt
